@@ -71,6 +71,6 @@ if (isset($bannerid) && $bannerid != '')
 if ($phpAds_config['zone_cache'])
 	phpAds_RebuildZoneCache ();
 
-Header("Location: campaign-index.php?campaignid=$campaignid&message=".urlencode($strBannerDeleted));
+Header("Location: ".$returnurl."?campaignid=$campaignid");
 
 ?>
