@@ -87,6 +87,6 @@ if (isset($campaignid) && $campaignid != '')
 if ($phpAds_config['zone_cache'])
 	phpAds_RebuildZoneCache ();
 
-header("Location: client-index.php");
+header("Location: ".$returnurl);
 
 ?>
