@@ -220,7 +220,7 @@ if ($campaignid != "")
 	
 	$extra .= "</select>&nbsp;<input type='image' src='images/go_blue.gif'><br>";
 	$extra .= "<img src='images/break.gif' height='1' width='160' vspace='4'><br>";
-	$extra .= "<img src='images/icon-recycle.gif' align='absmiddle'>&nbsp;<a href='campaign-delete.php?campaignid=$campaignid'".phpAds_DelConfirm($strConfirmDeleteCampaign).">$strDelete</a><br>";
+	$extra .= "<img src='images/icon-recycle.gif' align='absmiddle'>&nbsp;<a href='campaign-delete.php?campaignid=$campaignid&returnurl=client-index.php'".phpAds_DelConfirm($strConfirmDeleteCampaign).">$strDelete</a><br>";
 	$extra .= "</form>";
 	
 	
