@@ -45,6 +45,7 @@ CVS			+ Added configuration manager  (Matteo) 20011104
 			  - Added application title to page title  (Niels) 20011201
 			  - Renamed some pages to make it more logical  (Niels) 20011201
 			  - Changed the icons of acls and activate/deactivate  (Niels) 20011201
+			  - Added return url to all delete actions  (Niels) 20011202
 
 			+ Misc bugfixes
 			  - Removed extra comma from config.inc  (Matteo) 20011017
